--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^5.2.4",
     "http-server": "^0.12.3",
+    "sass": "^1.32.11",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.34.0",
     "webpack-cli": "^4.6.0"
   },
@@ -33,5 +37,9 @@
     "regular",
     "expression",
     "testing"
-  ]
+  ],
+  "dependencies": {
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^1.5.0"
+  }
 }
