--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Regular expression tester with syntax highlighting.",
   "author": "Rupak Kumar",
   "license": "GPL-3.0",
-  "main": "index.html",
+  "private": true,
   "scripts": {
-    "start": "http-server",
-    "webpack": "webpack"
+    "start": "cd dist && http-server",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "babel-preset-es2015": "^6.24.1",
+    "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
     "http-server": "^0.12.3",
     "sass": "^1.32.11",
@@ -40,6 +41,7 @@
   ],
   "dependencies": {
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.5.0"
   }
 }
